2025-08-01 Se configura prueba de correo de Phishing.

--- a/CódigoFuente/BitacorasProduccion/Views/Information/EnvioCorreo.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Information/EnvioCorreo.cshtml
@@ -38,7 +38,7 @@
                     </div>
                     <div class="x_content">
                         <h4>Seleccionar Destinatarios</h4>
-                        <p>Busca o desmarca los empleados a los que no deseas enviar el comunicado.</p>
+                        <p>Busca o desmarca los empleados a los que no deseas enviar el correo.</p>
                         <div class="row" style="margin-bottom: 15px; background-color: #f7f7f7; padding: 15px; border-radius: 5px; border: 1px solid #e6e6e6;">
                             <div class="col-md-10">
                                 <label>Seleccionar por Planta:</label>
@@ -113,7 +113,7 @@
                             </div>
 
                             <div class="form-group">
-                                <button type="submit" id="btnEnviar" class="btn btn-success"><i class="fa fa-paper-plane"></i> Enviar Comunicado</button>
+                                <button type="submit" id="btnEnviar" class="btn btn-success"><i class="fa fa-paper-plane"></i> Enviar Correo</button>
                             </div>
                         }
                     </div>
@@ -237,7 +237,7 @@
 
                 Swal.fire({
                     title: '¿Estás seguro?',
-                    text: `Se enviará el comunicado a ${totalSeleccionados} destinatarios.`,
+                    text: `Se enviará el correo a ${totalSeleccionados} destinatarios.`,
                     icon: 'warning',
                     showCancelButton: true,
                     confirmButtonColor: '#3085d6',
